--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,10 @@ contourpy==1.3.3
 cycler==0.12.1
 debugpy==1.8.19
 decorator==5.2.1
+duckdb==1.4.3
 executing==2.2.1
 fonttools==4.61.1
+hmmlearn==0.3.3
 ipykernel==7.1.0
 ipython==9.8.0
 ipython_pygments_lexers==1.1.1
