--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ duckdb==1.4.3
 executing==2.2.1
 fonttools==4.61.1
 hmmlearn==0.3.3
+imbalanced-learn==0.14.1
+imblearn==0.0
 ipykernel==7.1.0
 ipython==9.8.0
 ipython_pygments_lexers==1.1.1
@@ -41,6 +43,7 @@ scikit-learn==1.8.0
 scipy==1.16.3
 seaborn==0.13.2
 six==1.17.0
+sklearn-compat==0.1.5
 stack-data==0.6.3
 statsmodels==0.14.6
 threadpoolctl==3.6.0
